# monero-crawler-rs

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml  typos.toml
.github/workflows/: audit.yml  lockbud.yml
client/: Cargo.toml
client/src/: error.rs
common/: Cargo.toml
server/: Cargo.toml  DRAFT_DB.md  README.md
server/crawler/: Cargo.toml  README.md  TODO.md  rust-toolchain.toml
server/crawler/examples/: crawl.rs
server/crawler/src/: capability_checkers.rs  lib.rs  peer_requests.rs  seeds.rs
server/migrations/monero-crawler-rs/: up.sql
server/src/: config.rs  crawler.rs  handler.rs  lib.rs  main.rs
server/src/db/: migration.rs  mod.rs  model.rs  schema.rs
